--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html, body {
   height: 100%;
   background-color: white;
   color: #000000;
-  font-family: sans;
+  font-family: sans, sans-serif;
 }
 
 :root {
