--- a/style.scss
+++ b/style.scss
@@ -377,16 +377,65 @@ h2{
 
 .view-7{
     .box-container{
-        padding: 0;
+        width: 85%;
+        max-width: 1280px;
+        height: auto;
+        
         background-color: #042449;;
         border-radius: 40px;
-
         display:  flex;
         flex-direction: row;
+        align-items: center;
         justify-content: space-between;
+        position: relative;
+        overflow: hidden;
+
+        .text-sec{
+            width: 100%;
+            padding: 4rem 2rem;
+            color: var(--white-color);
+            // background-color: blue;
+
+            h3{
+                font-size: var(--font-size-heading-3);
+                margin-bottom: 1rem;
+            }
+
+            p{
+                font-size: var(--font-size-para-1);
+                margin-bottom: 1rem;
+            }
+
+            .btn-sec{
+                .btn-i{
+                    background-color: #fff;
+                    color: var(--blue-color);
+                    padding: 0.6rem 2rem;
+                }
+
+                .btn-r{
+                    background-color: transparent;
+                }
+            }
+        }
+
+
+        .img-sec{
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 100%;
+            max-width: 400px;
+            height: 100%;
+            display: flex;
+            justify-content: end;
+            z-index: 1;
+        }
         img{
-            position: relative;
-            
+            width: 100%;
+            height: 100%;
+            height: auto;
+            border-radius: 0px 30px 30px 0;
             z-index: 1;
         }
 
@@ -548,6 +597,33 @@ h2{
             gap: 1.5rem
         }
 
+    }
+
+    .view-7{
+        
+        .box-container{
+            width: 80%;
+            // padding: 0 250px;
+            .text-sec{
+                padding: 5rem 5rem;
+                // background-color: green;
+
+                h3{
+                    font-size: 60px;
+                }
+
+                p{
+                    font-size: 20px;
+                }
+
+                .btn-sec{
+                    margin-bottom: 1rem;
+                    .btn-r, .btn-i{
+                        padding: 0.8rem 3rem;
+                    }
+                }
+            }
+        }
     }
     
 }
